Semoga final. Fixing collapse untuk kesekian kalinya wkwkwkwkwk

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -159,11 +159,14 @@ div.card {
 	font-size: 1rem;
 }
 
-@media screen and (max-width: 401px) {
-		.card {
+@media screen and (max-width: 500px) {
+/*		.card {
 			width: 100%;
 			margin-left: 11%;
-		}	
+		}	*/
+		.navbar-brand {
+			font-size: 20px;
+		}
 	}
 	@media screen and (max-width: 801px) {
 		#container {
@@ -172,28 +175,28 @@ div.card {
 		.card-deck, {
 			width: 100%;		
 		}
-		.card {
+/*		.card {
 			width: 100%;
 			margin-left: 10%;
-		}
+		}*/
 		.anu {
 			height: 50%;
 		}
 	}
 	@media screen and (max-width: 1201px) {
-		.card {
+/*		.card {
 			width: 100%;
 			margin-left: 10%;
-		}
+		}*/
 		.anu {
 			height: 50%;
 		}		
 	}
 	@media screen and (min-width: 1202px) {
-		.card-deck, .card {
+/*		.card-deck, .card {
 			width: 100%;
 			margin-left: 0.5%;
-		}
+		}*/
 
 		.anu {
 			width:33%;
@@ -206,3 +209,4 @@ div.card {
 	  text-align: center;
 	  border-radius: 15px;
 	}
+
